--- a/index.html
+++ b/index.html
@@ -19,39 +19,56 @@
             <div class="item img-slider" style="--position: 2">
                 <img src="/assets/images/2.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 3">
+            <div class="item img-slider" style="--position: 3">
                 <img src="/assets/images/3.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 4">
+            <div class="item img-slider" style="--position: 4">
                 <img src="/assets/images/4.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 5">
+            <div class="item img-slider" style="--position: 5">
                 <img src="/assets/images/5.jpg" alt="">
             </div>
-            <div class="item img-slider"     style="--position: 6">
+            <div class="item img-slider" style="--position: 6">
                 <img src="/assets/images/6.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 7">
+            <div class="item img-slider" style="--position: 7">
                 <img src="/assets/images/7.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 8">
+            <div class="item img-slider" style="--position: 8">
                 <img src="/assets/images/8.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 9">
+            <div class="item img-slider" style="--position: 9">
                 <img src="/assets/images/9.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 10">
+            <div class="item img-slider" style="--position: 10">
                 <img src="/assets/images/10.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 11">
+            <div class="item img-slider" style="--position: 11">
                 <img src="/assets/images/11.jpg" alt="">
             </div>
-            <div class="item img-slider"    style="--position: 11">
+            <div class="item img-slider" style="--position: 11">
                 <img src="/assets/images/12.jpg" alt="">
             </div>
         </div>
     </div>
 
+
+
+
+
+    <!-- <script type="importmap">
+        {
+            "imports": {
+              "three": "https://unpkg.com/three/build/three.module.js",
+              "three/addons/": "https://unpkg.com/three/examples/jsm/"
+            }
+          }
+      </script>
+    <script type="module" src="/assets/js/index.js"></script> -->
+
+
 </body>
+
+
 
 </html>
